--- a/landing.css
+++ b/landing.css
@@ -20,8 +20,8 @@
 
 body {
   background-image: url("images/bgimg.jpg");
-  height: 100%;
-  min-height: 100vh;
+  /* height: 100%;
+  min-height: 100vh; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -74,15 +74,28 @@ body {
   display: block;
 }
 
+.social-section {
+  position: absolute;
+  right: 50px;
+  top: 200px;
+}
+
+.social-section-mobile {
+  display: none;
+}
+
+.main-section {
+  padding-top: 50px;
+  padding-bottom: 30px;
+}
+
 @media only screen and (max-width: 700px) {
   body {
     background-image: url("images/mob-bg.jpg");
-    height: 100%;
-    min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: #fff;
+    color: #000;
     font-family: "ubuntu";
   }
   .camera-img {
@@ -90,13 +103,12 @@ body {
     height: 80%;
     width: 200px;
   }
-  .social-section {
+  .social-section-mobile {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    position: absolute;
-    right: 100px;
-    bottom: 10px;
+    margin-top: 40px;
     align-items: center;
+    text-align: center;
   }
   .sub-heading {
     font-family: "morelinia", cursive;
@@ -111,13 +123,11 @@ body {
     border-right: 0px;
     padding-right: 20px;
   }
-}
-
-@media only screen and (min-width: 710px) {
   .social-section {
-    position: absolute;
-    right: 50px;
-    top: 200px;
+    display: none;
+  }
+  .main-section {
+    padding-top: 20px;
   }
 }
 
